# classify-programing_language

./: .gitignore  README.md  README_DEPLOYMENT.md  SHARED_LIBRARY_CONCEPT.md  create_new_ml_project.sh  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
AIChat/: 01.md  02.md  03.md  04.md
configs/: default.yaml  lightweight.yaml
models_registry/: download_models.py  model_info.json
src/: main.py
src/config/: config.py
src/data/: loader.py  preprocessor.py
src/evaluation/: evaluator.py
src/models/: base.py  classifier.py
src/training/: trainer.py
src/utils/: logger.py  visualization.py
src/web/: inference.py  model_manager.py
