[project]
name = "classify-programing_language"
version = "0.1.0"
description = "Machine learning project based on ML template"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "joblib>=1.4.2",
    "kagglehub>=0.3.13",
    "datasets>=4.0.0",
    "transformers>=4.56.0",
    "streamlit>=1.28.0",
]
